syntax = "proto3";

option java_package = "com.feedr.protobuf";
option java_outer_classname = "UserProto";

message User {
    string username = 1;
    string password = 2;
    string userType = 3;
}